feat: add geojson store

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ sqlalchemy = "^2.0.35"
 alembic = "^1.13.3"
 asyncpg = "^0.30.0"
 pydantic = "^2.9.2"
+pydantic-geojson = "^0.1.1"
 
 [build-system]
 requires = ["poetry-core"]
